--- a/Deployment DS/train/Klasifikasi Bunga Iris (Model Logistic Regression).html
+++ b/Deployment DS/train/Klasifikasi Bunga Iris (Model Logistic Regression).html
@@ -13261,9 +13261,9 @@ Tim Deployment dan Tim DS <br>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>Iris-virginica     50
+<pre>Iris-versicolor    50
+Iris-virginica     50
 Iris-setosa        50
-Iris-versicolor    50
 Name: Species, dtype: int64</pre>
 </div>
 
@@ -13480,8 +13480,8 @@ Name: Species, dtype: int64</pre>
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Akurasi Model (Train) : 96.43 %
-Akurasi Model (Test)  : 100.0 %
+<pre>Akurasi Model (Train) : 97.32 %
+Akurasi Model (Test)  : 97.37 %
 </pre>
 </div>
 </div>
